# pretix-furbadge-plugin

./: MANIFEST.in  README.md  pretix_telegram.md  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
pretix_furbadge/: apps.py  badge_renderer.py  build.py  exporter.py  forms.py  frontend_views.py  models.py  signals.py  types.py  urls.py  views.py
pretix_furbadge/bot/: __init__.py  commands.py  telegram_api.py
pretix_furbadge/locale/: django.pot
pretix_furbadge/locale/en/LC_MESSAGES/: django.po
pretix_furbadge/locale/pl/LC_MESSAGES/: django.po
pretix_furbadge/migrations/: 0001_initial.py  0002_telegram_integration.py  0003_badgetype_avatar_shape.py  0004_baddata_telegram_delivery_mode.py  0005_remove_telegramidentity_unique_telegram_identity_per_organizer_and_more.py  0006_alter_productbadgelink_badge_type.py  0007_telegramorderlink_event.py  0008_remove_badgedata_show_telegram_in_public_list_and_more.py  0009_alter_telegramorderlink_telegram_delivery_mode.py
pretix_furbadge/static/pretix_furbadge/: badge_edit.css  badge_edit.js  cropper.min.js  order_tg_connect.js  order_tg_manage.js  order_tg_manage_admin.js
pretix_furbadge/templates/pretix_furbadge/: badge_edit.html  font_delete.html  font_form.html  font_list.html  item_form.html  link_delete.html  order_info.html  order_telegram.html  public_attendee_list.html  settings.html  settings_base.html  telegram_login_step.html  telegram_order_admin.html  telegram_settings.html  type_delete.html  type_form.html  type_list.html
tests/: conftest.py  test_badge_renderer.py  test_telegram_helpers.py
