[project]
name = "pretix-furbadge-plugin"
dynamic = ["version"]
description = "Originally made for Futrobrzeg, Furry Badges! provides an alternative badge plugin more suited for furry conventions and events."
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["pretix"]
authors = [
    {name = "Norbert Dudziak", email = "norbert.dudziak@norxnd.com"},
]
maintainers = [
    {name = "Norbert Dudziak", email = "norbert.dudziak@norxnd.com"},
]

dependencies = [
    "pypdf>=4.0",
    "Pillow>=9.0",
    "pdf2image>=1.16",
    "reportlab>=4.0.0",
    "pretix>=2026.6.0",
    "django==5.2.*",
    "fonttools==4.63.*",
    "otf2ttf==0.2",
    "segno==1.6.6",
]

[project.optional-dependencies]
dev = [
    "types-reportlab==4.5.1.*",
    "django-stubs==6.0.*",
    "mypy==1.10.0",
    "pyright>=1.1.360",
    "pytest>=8.0.0",
    "pytest-django>=4.12.0",
    "build>=1.5.0",
]

[project.entry-points."pretix.plugin"]
pretix_furbadge = "pretix_furbadge:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/NORXND/pretix-furbadge-plugin"
repository = "https://github.com/NORXND/pretix-furbadge-plugin"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_furbadge.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false

[[tool.mypy.overrides]]
module = [
    "isodate.*",
    "pretix.*",
    "fontTools.*",
    "django_scopes.*",
    "requests",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pyright]
include = ["pretix_furbadge"]
exclude = ["build", ".venv", ".git", "tests", "**/node_modules", "**/__pycache__", "**/.*"]
typeCheckingMode = "basic"
reportMissingImports = "none"
reportMissingModuleSource = "none"
reportAttributeAccessIssue = "none"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "none"
reportArgumentType = "none"
reportAssignmentType = "none"